btn degradé + liste

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                 <li>
                     <p>1</p>
                     <i class="fa-solid fa-mobile-screen-button icone-menu" aria-hidden="true"></i>
-                    Choisissez un restaurant
+                    <span>Choisissez un restaurant</span>
                 </li>
                 <li>
                     <p>2</p>
                     <i class="fa-solid fa-list icone-menu" aria-hidden="true"></i>
-                    Composez votre menu
+                    <span>Composez votre menu</span>
                 </li>
                 <li>
                     <p>3</p>
                     <i class="fa-solid fa-store icone-menu" aria-hidden="true"></i>
-                    Dégustez au restaurant
+                    <span>Dégustez au restaurant</span>
                 </li>
             </ul>
         </div>
