--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -198,9 +198,9 @@
                 </div>
             </div>
         </div>
-        <a href="#">
-            <div class="btn btn_commande">Commander</div>
-        </a>
+        <div class="explorer">
+            <div class="btn">Commander</div>
+        </div>
     </section>
     <footer>
         <span>ohmyfood</span>
