--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -184,9 +184,9 @@
                 </div>
             </div>
         </div>
-        <a href="#">
-             <div class="btn btn_commande">Commander</div>
-        </a>
+        <div class="explorer">
+            <div class="btn">Commander</div>
+        </div>
     </section>
     <footer>
         <span>ohmyfood</span>
@@ -197,3 +197,4 @@
             <li> <a href="mailto:hello@openclassrooms.com"> Contact </a></li>
         </ul>
     </footer>
+</body>
