--- a/A-la-francaise.html
+++ b/A-la-francaise.html
@@ -183,12 +183,12 @@
                 </div>
             </div>
         </div>
-        <a href="#">
-            <div class="btn btn_commande">Commander</div>
-        </a>
+        <div class="explorer">
+            <div class="btn">Commander</div>
+        </div>
     </section>
     <footer>
-        <h3>ohmyfood</h3>
+        <span>ohmyfood</span>
         <ul>
             <li> <i class="fa-solid fa-utensils"></i> Proposer un restaurant </li>
             <li> <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire </li>
