--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <a href="./la-palette-du-gout.html">
                         <div class="bloc-card--nouveau">Nouveau</div>
                         <div class="bloc-card--image">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo" class="image_responsive">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo" class="image__responsive">
                         </div>
                         <div class="bloc-container">
                             <div class="bloc-content">
@@ -96,7 +96,7 @@
                     <a href="./la-note-enchantee.html">
                         <div class="bloc-card--nouveau">Nouveau</div>
                         <div class="bloc-card--image">
-                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo" class="image_responsive">
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo" class="image__responsive">
                         </div>
                         <div class="bloc-container">
                             <div class="bloc-content">
@@ -118,7 +118,7 @@
                 <div class="bloc-card">
                     <a href="./A-la-francaise.html">
                         <div class="bloc-card--image">
-                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo" class="image_responsive">
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo" class="image__responsive">
                         </div>
                         <div class="bloc-container">
                             <div class="bloc-content">
@@ -138,7 +138,7 @@
                 <div class="bloc-card">
                     <a href="le-delice-des-sens.html">
                         <div class="bloc-card--image">
-                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo" class="image_responsive">
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo" class="image__responsive">
                         </div>
                         <div class="bloc-container">
                             <div class="bloc-content">
