--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -23,7 +23,7 @@
         </a>
     </header>
     <div class="bandeau">
-        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo" class="image_responsive">
+        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo" class="image__responsive image__responsive--menu">
     </div>
     <!--nom restau+coeur -->
     <section class="container__fonction container__fonction-gris container__fonction-gris--menu">
@@ -203,7 +203,7 @@
         </div>
     </section>
     <footer>
-        <span>ohmyfood</span>
+        <h4>ohmyfood</h4>
         <ul>
             <li> <i class="fa-solid fa-utensils"></i> Proposer un restaurant </li>
             <li> <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire </li>
